# attestor

./: .dockerignore  .env.example  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.api  FUNDRAISING_EXECUTION_PLAN.md  FUNDRAISING_ROADMAP_CHECKLIST.md  LICENSE  LONGMEMEVAL_PLAN.md  MIGRATING.md  README.md  RENAME_TO_ATTESTOR_PLAN.md  REQUIREMENTS.md  STUDY_GUIDE.md  bench_claude.py  bench_perf.py  publish.sh  pyproject.toml  server.json  smithery.yaml  start.sh
.claude-plugin/: CLAUDE.md  marketplace.json  plugin.json
.claude-plugin/hooks/: hooks.json
.github/workflows/: docker.yml  evals.yml  workflow.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
agent_memory/: __init__.py  _paths.py  _version.py  api.py  cli.py  client.py  context.py  core.py  embeddings.py  init_wizard.py  lambda_handler.py  locomo.py  mab.py  models.py
agent_memory/config/: __init__.py  loader.py  migrate.py  schema.py
agent_memory/graph/: neo4j_graph.py  networkx_graph.py
agent_memory/hooks/: post_tool_use.py  session_start.py  stop.py
agent_memory/infra/: Dockerfile.postgres  __init__.py  arango-oasis-setup.sh  arango-oasis-teardown.sh  aws.tf  azure.tf  docker.py  gcp.tf  neon-setup.sh  neon-teardown.sh
agent_memory/mcp/: server.py
agent_memory/retrieval/: orchestrator.py  scorer.py
agent_memory/store/: _extras.py  arango_backend.py  aws_backend.py  azure_backend.py  base.py  chroma_store.py  embeddings.py  gcp_backend.py  postgres_backend.py  registry.py  schema.sql  schema_pg.sql  sqlite_store.py  vector_store.py
agent_memory/temporal/: manager.py
agent_memory/ui/: __init__.py  app.py
agent_memory/utils/: config.py
attestor/: __init__.py  _branding.py  _paths.py  api.py  auth.py  bench_config.py  cli.py  client.py  config.py  context.py  core.py  doctor_v4.py  gdpr.py  init_wizard.py  llm_trace.py  locomo.py  longmemeval.py  longmemeval_consistency.py  longmemeval_critique.py  mab.py  migrate.py  mode.py  models.py  otel.py  quotas.py  recall_context.py  trace.py
attestor/cli/: __init__.py  __main__.py  _common.py  _setup_helpers.py  main.py
attestor/config/: __init__.py  loader.py  models.py  resolver.py
attestor/consolidation/: __init__.py  consolidator.py  queue.py  reflection.py  session_end.py
attestor/conversation/: __init__.py  apply.py  episodes.py  ingest.py  turns.py
attestor/core/: __init__.py  agent_memory.py  identity_service.py  provenance_service.py  quota_service.py
attestor/extraction/: conflict_resolver.py  extractor.py  llm_extractor.py  prompt_loader.py  prompts.py  round_extractor.py  rule_based.py
attestor/graph/: extractor.py  networkx_graph.py
attestor/hooks/: _base.py  post_tool_use.py  session_start.py  stop.py
benchmark-logs/: README.md  bench-baseline-haiku-20260321-103238.json  bench-memwright-haiku-20260321-013822.json  bench-memwright-haiku-20260321-014214.json  bench-memwright-haiku-20260321-020351.json  locomo-arangodb-1x1-20260323-233101.json  locomo-arangodb-aws-quick2.json  locomo-arangodb-quick.json  locomo-azure-quick.json  locomo-groq-5-6-results.json  locomo-groq-7-8-results.json  locomo-groq-9-10-results.json  locomo-groq-results.json  locomo-v2-results.json  mab-arangodb-quick.json  mab-arangodb-quick2.json  mab-azure-quick.json  mab-groq-lru-80-results.json  mab-groq-lru-95-results.json  mab-groq-lru-results.json  mab-groq-results.json  mab-groq-ttl-results.json  mab-v2-openai-results.json  mab-v2-results.json
commands/: demo-recording.md  install-agent-memory.md  install-attestor.md  uninstall-agent-memory.md  uninstall-attestor.md
configs/: attestor.yaml  bench.yaml
docs/: CNAME  INSTALL.md  LANDING_PAGE_COPY.md  LATENCY_BENCHMARKS.md  PLAN_LOCOMO_GAP_CLOSE.md  PRESENTATION.md  attestor.html  benchmarks.html  index.html  plugins.md  privacy.html  style.css  v4-plan.md
evals/: README.md  __init__.py  baseline.py  braintrust_gate.py  braintrust_locomo.py  braintrust_longmemeval.py  braintrust_mab.py  gate.py  inspect_mab.py  matrix.yaml  publish_baseline.py  runner.py  summary.py
experiments/: async_recall_latency.py  cat1_3_sweep.py  cat2_sweep.py  cat4_sweep.py  cat56_sweep.py  cat_ku_sweep.py  code_exec_poc.py  orchestrator_async_smoke.py  pinecone_lme_temporal_diagnostic.py  pinecone_supersession_smoke.py
hooks/: hooks.json
logs/: phase2_temporal_fails.json  phase3_fails_retry_delta.json  phase3_scale_failures.json
packaging/memwright-shim/: README.md  pyproject.toml
packaging/memwright-shim/memwright/: __init__.py
scripts/: _attestor_config.py  _bench_config.py  bench-lambda.sh  bench_binary_matrix.py  bench_binary_models.py  bench_local_models.py  bench_multiclass_models.py  classify_lme_cascade.py  classify_lme_categories.py  classify_lme_multiclass.py  classify_lme_v2.py  deploy-cloudrun.sh  deploy-containerapp.sh  deploy-lambda.sh  deploy.sh  lme_prompts.py  lme_smoke_local.py  quick-bench.sh  run_ablation.sh  smoke_api.py  teardown-cloudrun.sh  teardown-containerapp.sh  teardown-lambda.sh
tests/: conftest.py  test_abstention_synthetic_loader.py  test_apply_decisions.py  test_arango_backend.py  test_arango_live.py  test_arango_smoke.py  test_as_of_replay.py  test_auth_middleware.py  test_aws_backend.py  test_azure_backend.py  test_azure_live.py  test_base_interfaces.py  test_bench_trend.py  test_bm25_lane.py  test_chain_of_note_prompt.py  test_chroma_store.py  test_cli.py  test_cli_config.py  test_client_api_parity.py  test_client_import_gaps.py  test_config_backends.py  test_config_loader.py  test_config_migrate.py  test_config_no_duplicate_keys.py  test_config_schema.py  test_config_toml.py  test_conflict_resolver.py  test_connection.py  test_consolidation_queue.py  test_consolidator.py  test_context_pack.py  test_conversation_ingest.py  test_conversation_turns.py  test_core.py  test_core_uses_new_loader.py  test_critique_revise.py  test_critique_revise_config.py  test_docker.py  test_docker_core_hook.py  test_doctor_v4.py  (+88 more)
(+295 files in other folders)
