[project]
name = "attestor"
version = "4.0.0a1"
description = "Production-grade memory infrastructure for multi-agent systems. Namespace isolation, RBAC, provenance, ranked retrieval."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<4.0"
authors = [{ name = "aarjay" }]
keywords = ["ai", "agent", "memory", "multi-agent", "llm", "rbac", "namespace", "provenance", "postgres", "pgvector", "neo4j", "graph", "arangodb", "mcp", "agentic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.0.0",
    "tomlkit>=0.12.0",
    "starlette>=0.27.0",
    "uvicorn>=0.23.0",
]

[project.urls]
Homepage = "https://attestor.dev"
Repository = "https://github.com/bolnet/attestor"
Issues = "https://github.com/bolnet/attestor/issues"

[project.optional-dependencies]
extraction = ["openai>=1.0.0"]
arangodb = ["python-arango>=8.0.0"]
postgres = ["psycopg2-binary>=2.9.0"]
neo4j = ["neo4j>=5.0.0"]
aws = ["boto3>=1.28.0"]
azure = ["azure-cosmos>=4.5.0", "azure-identity>=1.14.0", "azure-search-documents>=11.4.0", "networkx>=3.0"]
gcp = ["google-cloud-firestore>=2.11.0", "google-cloud-aiplatform>=1.38.0"]
cloud-embeddings = ["openai>=1.0.0"]
lambda = ["mangum>=0.17.0", "starlette>=0.27.0"]
docker = ["docker>=6.0"]
eval = ["braintrust>=0.0.150", "anthropic>=0.30.0", "PyYAML>=6.0"]
all = [
    "openai>=1.0.0",
    "psycopg2-binary>=2.9.0",
    "python-arango>=8.0.0",
    "neo4j>=5.0.0",
    "boto3>=1.28.0",
    "azure-cosmos>=4.5.0",
    "azure-identity>=1.14.0",
    "azure-search-documents>=11.4.0",
    "networkx>=3.0",
    "google-cloud-firestore>=2.11.0",
    "google-cloud-aiplatform>=1.38.0",
    "docker>=6.0",
]

[project.scripts]
attestor = "attestor.cli:main"

[tool.poetry]
packages = [{ include = "attestor" }]

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
pytest-cov = ">=4.0"
requests = ">=2.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "docker: tests requiring Docker (deselect with '-m not docker')",
    "unit: fast, dependency-free unit tests",
    "integration: tests that touch real services or the filesystem beyond fixtures",
]
